--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url('Fonts/Montserrat-Regular.otf') format('opentype');
+  src: url('../Fonts/Montserrat-Regular.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Fonts/Montserrat-Bold.otf') format('opentype');
+  src: url('../Fonts/Montserrat-Bold.otf') format('opentype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Fonts/Montserrat-Light.otf') format('opentype');
+  src: url('../Fonts/Montserrat-Light.otf') format('opentype');
   font-weight: lighter;
   font-style: normal;
 }
